--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.1",
     "concurrently": "^7.6.0",
+    "dotenv": "^16.0.3",
     "emailjs": "^4.0.1",
+    "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
